fix z-index issues in sidebar

--- a/components/sidebar/_sidebar.scss
+++ b/components/sidebar/_sidebar.scss
@@ -54,5 +54,6 @@
   .sidebar {
     transform: translateX(-100%);
     position: fixed;
+    z-index: 999;
   }
 }
